@@ -2,6 +2,10 @@ Calc: Changes
 
 —Update 3
 
+——Revision 6, 05/26/2022.
+- `help` prints function reference only.
+- Moved `help` to `man`.
+
 ——Revision 5, 05/07/2022.
 - Edited help text.
 - Edited `help` wording.
